--- a/index.html
+++ b/index.html
@@ -7,62 +7,68 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td>  <img src="kannu.jpeg"  alt="kulbushan profile picture"></td>
-        <td>  <h1>kulbushan</h1>
-          <p><em>Founder and CTO of <strong><a href="https//www.londonappbrewery.com">The App brewery</a></strong></em></p>
-          <p> I am ios and web devleoper I love coffe and brew my own beers.</p></td>
+        <td>  <img src="kannu.jpg"  alt="kulbushan profile picture"></td>
+        <td>  <h1>kulbushan singh</h1>
+         <P> <strong> Computer science engineering</strong>  <strong><a href="https://github.com/kulbushansingh">my cv</a></strong></p>
+          <P><strong>Contact no. :-     9682151583</strong></P>
+          <P><strong>gmail :-  kannurajput1515@gmail.com </strong></P>
+          <strong> Carreer objective</strong><p>To work in an innovative and challenging environment that can enhance and improve my skills, knowledge and provide an opportunity to grow with the company while faithfully rendering the services with utmost sincerity and dedication. </p></td>
       </tr>
     </table>
-    <h3> Books and Teaching</h3>
+    <h3> Hobbies and Interest</h3>
     <ul>
-      <li>the complete ios app developmetn Bootcamp</li>
-      <li>the complete web devlopment bootcmap.</li>
+      <li>•Willingness to learn new things. </li>
+        <li>•Watching movies  & Listening king’s Music </li>
+        <li>•Artificial Intelligence.</li> 
+        <li>•Coding</li>
+    </ul>
+    <h3>Education Background</h3>
+      <thead>
+          <tbody>
+    <ul>
+      <li>High School Examination  (X) (JK BOSE)</li>
+      <p>10th - 61%</p>
+      <p>completed in 2015</p>
+    </ul>
+    <ul>
+    <li>Higher Secondary School Examination  (+2)  (JK BOSE) </li>
+    <p>12th - 59%</p>
+    <p>completed in 2018</p>
+  </ul>
+  <ul>
+    <li>3 years Diploma in , Computer Science Engineering  (JK BOTE)                
+      IECS Polytechnic, Jammu (J&K) </li>
+      <p>71%</p>
+    </ul>
+    <ul>
+      <li>B.Tech in Computer Science Engineering (Tawi Technical Campus, shahpur kandi, pathankot)</li>
+      <p>completed in 2024</p>
     </ul>
     <hr>
-    <h3>Work Experience</h3>
-    <table cellspacing="10">
-      <thead>
-<tr>
-<th>dates</th>
-<th>work </th>
- </tr>
-      </thead>
-      <tbody>
-
-        <tr>
-          <td> 2010-2013</td>
-          <td> Lead Developer at Tempo App</td>
-     </tr>
-     <tr>
-      <td>2010</td>
-       <td>Reseacher aat The Institue of cognitive Neurosciences</td>
-        </tr>
-        <tr>
-        <td>2009-2010</td>
-        <td>Clinical Doctor at the National Health Service</td>
-
-        </tr>
-          </tbody>
-    </table>
-    <hr>
-    <h3>Skills</h3>
+    <h3>COMPUTER PROFICIENCY </h3>
     <table cellspacing="10">
 <tr>
-<td>Ios development</td>
-<td>🥳🥳🥳🥳🥳</td>
+<td><strong>Programming Languages</strong></td>
+<td>C++, HTML,  CSS, Javascript. Python</td>
 </tr>
 <tr>
-  <td> Web development</td>
-<td>🥳🥳🥳🥳</td>
+  <td><strong>Computer Software</strong> </td>
+<td> Microsoft Office. </td>
 </tr>
-<td> Photography</td>
-<td>🥳🥳🥳</td>
+<td> <strong>opreating System</strong> </td>
+<td>Microsoft Window 11, LINUX (Ubuntu). </td>
 </tr>
 
     </table>
 
     <hr>
-  <a href="hobbies.html">My Hobbies</a>
-  <a href="contactme.html">Contact Me</a>
+    <ul>
+  <li><a href="Academic project.html">Academic project</a></li>
+  <li><a href="contactme.html">Contact Me</a></li>
+  <li><a href="personal qualities.html">Personal Qualities</a></li>
+  <li><a href="personal profile.html"> personal profile</a></li>
+</ul>
+<h4>Declaration</h4>
+<p> I vouch the authenticity of the above-mentioned information. Give me an opportunity, I promise to put my sincere efforts to rise to your expectations and become an asset to your esteemed organization. </p>
   </body>
 </html>
